Configurar despliegue Railway + Vercel